updating self-site

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Cheryl's homepage!
+description: Here, I make a list of my current projects. There's a few things I've done.
