--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "execa": "^4.0.3",
+    "pdfvuer": "^1.7.1",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
